# firelands-next

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md  authserver.yaml  docker-compose.yml  implementation_plan.md  worldserver.yaml
src/application/: CMakeLists.txt
src/application/combat/: CombatEntityAdapters.h  CombatHostility.cpp  CombatHostility.h  CombatService.cpp  CombatService.h  CreatureChaseMovement.cpp  CreatureChaseMovement.h  PlayerCombatStats.cpp  PlayerCombatStats.h
src/application/logic/: GossipLogic.h  QuestGiverLogic.h
src/application/ports/: ICommandService.h  ICommandSession.h  IGameScriptHost.h  IMapCollisionQueries.h  IMapNotifier.h
src/application/services/: AuthService.h  CharacterService.h  CommandService.cpp  CommandService.h  CommandTextUtils.h  GmTicketService.cpp  GmTicketService.h  MmapDebugCommands.cpp  MmapDebugCommands.h  OnlineCharacterSessionRegistry.cpp  OnlineCharacterSessionRegistry.h  PlayerCreateInfoService.cpp  PlayerCreateInfoService.h  PlayerSpellbook.cpp  PlayerSpellbook.h  RealmListService.cpp  RealmListService.h  SRPService.h  WebSessionService.h  WorldRatesConfig.h  WorldService.cpp  WorldService.h
src/application/spell/: PassiveSpellAuras.cpp  PassiveSpellAuras.h  PlayerAuraStatEffects.cpp  PlayerAuraStatEffects.h  SpellHitEffects.cpp  SpellHitEffects.h  SpellImpactEffects.cpp  SpellImpactEffects.h  SpellManager.cpp  SpellManager.h
src/domain/: CMakeLists.txt  Unit.h
src/domain/combat/: CombatEngine.cpp  CombatEngine.h  DamageCalculator.cpp  DamageCalculator.h
src/domain/models/: Character.h  CharacterCooldown.h  CharacterTalent.h  Chat.h  GmTicket.h  GossipMenu.h  NpcText.h  PhaseCondition.h  PlayerCreateInfo.h  PlayerTemplateStats.h  QuestGiverStatus.h  QuestGossip.h  QuestProgress.h  Realm.cpp  Realm.h  SpellDefinition.h  WebSession.h
src/domain/ports/: IPlayerQuestProgress.h
src/domain/repositories/: IAccountRepository.h  ICharacterRepository.h  ICreatureSpawnRepository.h  IGmTicketRepository.h  IGossipRepository.h  INpcTemplateSearchRepository.h  IPhaseConditionRepository.h  IPlayerCreateInfoRepository.h  IPlayerQuestProgressRepository.h  IQuestGossipRepository.h  IRealmRepository.h  ISpellCastTables.h  IVendorRepository.h  IWebSessionRepository.h
src/domain/world/: Aura.h  ChannelManager.h  Creature.cpp  Creature.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  Player.cpp  Player.h  UnitAuraState.cpp  UnitAuraState.h  WorldObject.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/collision/: DetourNavMeshManager.cpp  DetourNavMeshManager.h  MapCollisionQueriesReal.cpp  MapCollisionQueriesReal.h
src/infrastructure/combat/: InMemoryThreatManager.cpp  InMemoryThreatManager.h  MySqlSpellProcessor.cpp  MySqlSpellProcessor.h  MySqlThreatManager.cpp  MySqlThreatManager.h
src/infrastructure/dbc/: AchievementDbcStore.cpp  AchievementDbcStore.h  SpellCastTablesDbc.cpp  SpellCastTablesDbc.h  SpellEntryDbcStore.cpp  SpellEntryDbcStore.h  TalentDbcStore.cpp  TalentDbcStore.h
src/infrastructure/persistence/: DatabaseMigrationCatalog.h  DatabaseMigrator.h  DatabaseService.h  MemoryWebSessionRepository.h  MySqlAccountDataRepository.cpp  MySqlAccountDataRepository.h  MySqlAccountRepository.cpp  MySqlAccountRepository.h  MySqlCharacterRepository.cpp  MySqlCharacterRepository.h  MySqlCreatureSpawnRepository.cpp  MySqlGmTicketRepository.cpp  MySqlGmTicketRepository.h  MySqlGossipRepository.cpp  MySqlGossipRepository.h  MySqlNpcTemplateSearchRepository.cpp  MySqlPlayerCreateInfoRepository.cpp  MySqlPlayerCreateInfoRepository.h  MySqlQuestGossipRepository.cpp  MySqlQuestGossipRepository.h  MySqlRealmRepository.cpp  MySqlRealmRepository.h  MySqlVendorRepository.cpp  MySqlVendorRepository.h  SqlStatementSplitter.h
src/infrastructure/scripting/: LuaGameScriptHost.cpp  LuaGameScriptHost.h
src/infrastructure/world/: DbCreatureSpawnBootstrap.cpp  MapAuraTicker.cpp  MapAuraTicker.h  MapCollisionQueriesStub.cpp  MapCollisionQueriesStub.h
src/shared/: Banner.h  BigInt.h  CMakeLists.txt  Common.h  Config.cpp  Config.h  Crypto.h  Logger.h  SRPConstants.h
src/shared/dbc/: AreaTableDbc.cpp  AreaTableDbc.h  DbcReader.cpp  DbcReader.h  EmotesTextDbc.cpp  EmotesTextDbc.h  GtOctCombatDbc.cpp  GtOctCombatDbc.h  GtPlayerStatGameTables.cpp  GtPlayerStatGameTables.h  ItemTemplateStore.cpp  ItemTemplateStore.h  NameGenDbc.cpp  NameGenDbc.h  SpellDifficultyDbc.cpp  SpellDifficultyDbc.h  SpellVisualDbc.cpp  SpellVisualDbc.h  StarterSpellsDbc.cpp  StarterSpellsDbc.h
src/shared/game/: AccessLevel.h  Bag0InventoryData.h  ChatLanguages.cpp  ChatLanguages.h  CombatDamage.cpp  Emotes.h  ExperienceLogic.cpp  ExperienceLogic.h  ExperienceRates.h  GameTele.h  GmCreatureVisibility.h  MeleeRange.h  MirrorTimerTypes.h  Permissions.h  PlayerClass.h  PlayerFactionTeam.h  PlayerGmAppearance.cpp  PlayerGmAppearance.h  PlayerItemProficiency.cpp  PlayerItemProficiency.h  PlayerPowerType.h  QuestMask.h  ShapeshiftForms.cpp  ShapeshiftForms.h  SkillLineCategories.cpp  SkillLineCategories.h  SpellAttributes.h  SpellAuraTypes.h  SpellEffectMagnitude.h  SpellLevelGate.h  SpellPowerCost.h  StarterOpeningCinematic.h  StarterSkillFilters.cpp  StarterSkillFilters.h  StarterSpellFilters.cpp  StarterSpellFilters.h  StatFormulas.cpp  StatFormulas.h  UnitCombatStats.cpp  UnitCombatStats.h  (+5 more)
src/shared/network/: AccountDataTypes.h  AuraUpdateWire.cpp  AuraUpdateWire.h  AuthPacket.h  AuthPackets.h  BitReader.h  BitWriter.h  ByteBuffer.h  MonsterMovePackets.h  MoveUpdatePackets.h  MovementInfo.h  MovementSetPackets.h  MovementStateQueries.h  MovementWire.cpp  MovementWire.h  PlaySpellVisualKitWire.cpp  PlaySpellVisualKitWire.h  ServerPacket.h  SpellCastWire.cpp  SpellCastWire.h  SpellCooldownWire.cpp  SpellCooldownWire.h  (+7 more)
tests/: CMakeLists.txt
tools/extractors/: ArchivePath.h  CMakeLists.txt  ExtractorTasks.cpp  ExtractorTasks.h  ExtractorsCollisionTasks.cpp  ExtractorsFtxui.cpp  KnownDbcFiles.h  MpqPatchChain.cpp  MpqPatchChain.h  WowDataMpqList.cpp  WowDataMpqList.h  dbc_extractor_main.cpp  extractors_shell_main.cpp  map_extractor_main.cpp
(+399 files in other folders)
